--- a/.gitconfig
+++ b/.gitconfig
@@ -19,10 +19,8 @@
     }; f"
     
     clone-nonempty = "!cd "${GIT_PREFIX:-.}"; f() { \
-        if [ -z $1 ]; then                          \
-            echo Missing url parameter;             \
-        elif [ -z $2 ]; then                        \
-            echo Missing path parameter;            \
+        if [ $# -lt 2 ]; then                       \
+            echo Missing parameters;                \
         else                                        \
             mkdir -p $2;                            \
             cd $2;                                  \
