--- a/.gitconfig
+++ b/.gitconfig
@@ -19,15 +19,22 @@
     }; f"
     
     clone-nonempty = "!cd "${GIT_PREFIX:-.}"; f() { \
-        if [ $# -lt 2 ]; then                       \
-            echo Missing parameters;                \
-        else                                        \
+        if [ $# -eq 2 ] && [ $1 != "-f" ]; then     \
             mkdir -p $2;                            \
             cd $2;                                  \
             git init;                               \
             git remote add origin $1;               \
             git fetch;                              \
             git checkout -t origin/master;          \
+        elif [ $# -eq 3 ] && [ $1 == "-f" ]; then   \
+            mkdir -p $3;                            \
+            cd $3;                                  \
+            git init;                               \
+            git remote add origin $2;               \
+            git fetch;                              \
+            git checkout -tf origin/master;         \
+        else                                        \
+            echo Missing parameters;                \
         fi;                                         \
     }; f"
     
