--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-	editor = \"C:\\Users\\shaun\\AppData\\Local\\Programs\\Microsoft VS Code\\bin\\code\" --wait
+	editor = \"%LOCALAPPDATA%\\Programs\\Microsoft VS Code\\bin\\code\" --wait
 [user]
 	email = shauntanzongzhi@gmail.com
 	name = EvitanRelta
