Add 'remote set-url' to non-forced 'link'

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
     link = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 1 ] && [ $1 != "-f" ]; then     \
             git remote add origin $1;               \
+            git remote set-url origin $1;           \
             git push -u origin master;              \
         elif [ $# -eq 2 ] && [ $1 == "-f" ]; then   \
             git remote add origin $2;               \
