--- a/.gitconfig
+++ b/.gitconfig
@@ -38,6 +38,7 @@
         elif [ $# -eq 3 ] && [ $1 == "-f" ]; then   \
             mkdir -p $3;                            \
             cd $3;                                  \
+            rm -drf .git;                           \
             git init;                               \
             git remote add origin $2;               \
             git fetch;                              \
