--- a/.gitconfig
+++ b/.gitconfig
@@ -63,7 +63,7 @@
     }; f"
 
     pull-all-branches = "!cd "${GIT_PREFIX:-.}"; f() {  \
-        for remote in `git branch -r`; do git branch --track ${remote#origin/} $remote; done;   \
+        for remote in `git branch -r | grep -v \" -> \"`; do git branch --track ${remote#origin/} $remote; done;   \
         git fetch --all;                                \
         git pull --all;                                 \
     }; f"
