--- a/.gitconfig
+++ b/.gitconfig
@@ -63,6 +63,7 @@
     }; f"
 
     pull-all-branches = "!cd "${GIT_PREFIX:-.}"; f() {  \
+        git fetch -p;                                   \
         for remote in `git branch -r | grep -v \" -> \"`; do git branch --track ${remote#origin/} $remote; done;   \
         git fetch --all;                                \
         git pull --all;                                 \
