--- a/.gitconfig
+++ b/.gitconfig
@@ -7,11 +7,23 @@
     cum = "!cd "${GIT_PREFIX:-.}"; f() { git add .; git commit \"$@\"; }; f"
     cumane = "!cd "${GIT_PREFIX:-.}"; f() { git add .; git commit --amend --no-edit; }; f"
     cane = "!cd "${GIT_PREFIX:-.}"; f() { git commit --amend --no-edit; }; f"
-    dump = "!cd "${GIT_PREFIX:-.}"; f() { git restore .; git clean -df; }; f"
     undoc = "!cd "${GIT_PREFIX:-.}"; f() { git reset --soft HEAD^; }; f"
     stat = "!cd "${GIT_PREFIX:-.}"; f() { git status; }; f"
     pop = "!cd "${GIT_PREFIX:-.}"; f() { git stash pop; }; f"
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/^pick/$1/'\" git rebase -i $2; }; f"
+
+    dump = "!cd "${GIT_PREFIX:-.}"; f() {           \
+        if [ $# -eq 0 ]; then                       \
+            git restore .;                          \
+            git clean -df;                          \
+        elif [ $# -eq 1 ] && [ $1 == "-f" ]; then   \
+            git reset --quiet;                      \
+            git restore .;                          \
+            git clean -df;                          \
+        else                                        \
+            echo Invalid parameters;                \
+        fi;                                         \
+    }; f"
     
     link = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 1 ] && [ $1 != "-f" ]; then     \
