--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
     cane = "!cd "${GIT_PREFIX:-.}"; f() { git commit --amend --no-edit; }; f"
     undoc = "!cd "${GIT_PREFIX:-.}"; f() { git reset --soft HEAD^; }; f"
     stat = "!cd "${GIT_PREFIX:-.}"; f() { git status; }; f"
-    pop = "!cd "${GIT_PREFIX:-.}"; f() { git stash pop; }; f"
+    pop = "!cd "${GIT_PREFIX:-.}"; f() { git stash pop \"$@\"; }; f"
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/^pick/$1/'\" git rebase -i $2; }; f"
 
     dump = "!cd "${GIT_PREFIX:-.}"; f() {           \
