Revert "Replace 'stash-unstaged' implementation with 'git stash --staged'"
"git stash --staged" fails when staged and unstaged changes edit the
same line.
This reverts commit d6781e10c82dcc0831dbff3ef848ccc6cbdf9c0f.

--- a/.gitconfig
+++ b/.gitconfig
@@ -61,9 +61,9 @@
     }; f"
     
     stash-unstaged = "!cd "${GIT_PREFIX:-.}"; f() { \
-        git stash --quiet --staged;                 \
+        git commit -qm \"TEMP\";                    \
         git stash -u \"$@\";                        \
-        git stash pop --quiet \"stash@{1}\";        \
+        git undoc;                                  \
     }; f"
     
     stash-staged = "!cd "${GIT_PREFIX:-.}"; f() {   \
