Fix 'dump' not affecting files outside of current dir

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,12 +14,12 @@
 
     dump = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 0 ]; then                       \
-            git restore .;                          \
-            git clean -df;                          \
+            git restore :/;                         \
+            git clean -df :/;                       \
         elif [ $# -eq 1 ] && [ $1 == "-f" ]; then   \
             git reset --quiet;                      \
-            git restore .;                          \
-            git clean -df;                          \
+            git restore :/;                         \
+            git clean -df :/;                       \
         else                                        \
             echo Invalid parameters;                \
         fi;                                         \
