--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
     st = status
     pop = stash pop
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/^pick/$1/'\" git rebase -i $2~; }; f"
+    git = "!cd "${GIT_PREFIX:-.}"; f() { git \"$@\"; }; f"
 
     dump = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 0 ]; then                       \
