--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,7 @@
     cum = "!cd "${GIT_PREFIX:-.}"; f() { git add -A; git commit \"$@\"; }; f"
     cumane = "!cd "${GIT_PREFIX:-.}"; f() { git add -A; git commit --amend --no-edit; }; f"
     cane = commit --amend --no-edit
-    undoc = reset --soft HEAD^
+    undoc = reset --soft HEAD~
     st = status
     pop = stash pop
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/^pick/$1/'\" git rebase -i \"$2\"~; }; f"
