--- a/.gitconfig
+++ b/.gitconfig
@@ -11,8 +11,16 @@
     pop = stash pop
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/^pick/$1/'\" git rebase -i \"$2\"~; }; f"
     git = "!cd "${GIT_PREFIX:-.}"; f() { git \"$@\"; }; f"
-    
-    undoc = reset --soft HEAD~
+
+    undoc = "!cd "${GIT_PREFIX:-.}"; f() {           \
+        if [ $# -eq 0 ]; then                       \
+            git reset --soft HEAD~;                 \
+        elif [ $# -eq 1 ] && [ $1 == "-f" ]; then   \
+            git reset --hard HEAD~;                 \
+        else                                        \
+            echo Invalid parameters;                \
+        fi;                                         \
+    }; f"
 
     dump = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 0 ]; then                       \
