--- a/.gitconfig
+++ b/.gitconfig
@@ -124,3 +124,10 @@
         git fetch --all;                            \
         git reset --hard \"origin/$(git branch --show-current)\"; \
     }; f"
+
+    merge-this = "!cd "${GIT_PREFIX:-.}"; f() { \
+        branch=$(git current-branch);           \
+        git checkout master;                    \
+        git merge --no-ff \"$branch\";          \
+        git branch -d \"$branch\";              \
+    }; f"
