Add 'get-deleted-branch' alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -140,3 +140,13 @@
             echo Invalid parameters;                \
         fi;                                         \
     }; f"
+
+    get-deleted-branch = "!cd "${GIT_PREFIX:-.}"; f() { \
+        if [ $# -eq 1 ]; then                           \
+            commit_subject=$(git log --format=%s -n 1 \"$1\");                              \
+            branch_name=$(grep -Po \"(?<=')[^']+(?=')\" <<< \"$commit_subject\" | head -1); \
+            git checkout -b \"$branch_name\" \"$1^2\";  \
+        else                                        \
+            echo Invalid parameters;                \
+        fi;                                         \
+    }; f"
