--- a/.gitconfig
+++ b/.gitconfig
@@ -146,6 +146,7 @@
             commit_subject=$(git log --format=%s -n 1 \"$1\");                              \
             branch_name=$(grep -Po \"(?<=')[^']+(?=')\" <<< \"$commit_subject\" | head -1); \
             git checkout -b \"$branch_name\" \"$1^2\";  \
+            git checkout -;                         \
         else                                        \
             echo Invalid parameters;                \
         fi;                                         \
