--- a/.gitconfig
+++ b/.gitconfig
@@ -151,3 +151,14 @@
             echo Invalid parameters;                \
         fi;                                         \
     }; f"
+
+    unmerge = "!cd "${GIT_PREFIX:-.}"; f() {    \
+        is_merge_commit="$(git rev-parse --verify \"HEAD^2\" 2> /dev/null)"; \
+        if [ -n \"$is_merge_commit\" ]; then    \
+            git get-deleted-branch HEAD;        \
+            git undoc -f;                       \
+            git checkout -;                     \
+        else                                    \
+            echo HEAD is not a merge commit;    \
+        fi;                                     \
+    }; f"
