--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,7 @@
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/^pick/$1/'\" git rebase -i \"$2\"~; }; f"
     git = "!cd "${GIT_PREFIX:-.}"; f() { git \"$@\"; }; f"
     current-branch = rev-parse --abbrev-ref HEAD
+    branch-exists = "!cd "${GIT_PREFIX:-.}"; f() { git show-ref --quiet \"refs/heads/$1\"; }; f"
 
     undoc = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 0 ]; then                       \
@@ -92,11 +93,10 @@
             echo \"From $(git remote get-url origin)\";                 \
             for remote in `git branch -r | grep -v \" -> \" | grep \"origin/\"`; do \
                 branch=${remote#origin/};                               \
-                branch_not_exists=$(git show-ref refs/heads/$branch);   \
                 git fetch --update-head-ok origin $branch:$branch 2>&1  \
                     | grep -v \"From\";                                 \
-                [ -z \"$branch_not_exists\" ]                           \
-                    && git branch --quiet -u $remote $branch;           \
+                git branch-exists $branch                               \
+                    || git branch --quiet -u $remote $branch;           \
             done;                                                       \
         elif [ $# -gt 1 ] && [ $1 == "-s" ]; then                       \
             git fetch -p;                                               \
@@ -109,11 +109,10 @@
                         continue 2;                                     \
                     fi;                                                 \
                 done;                                                   \
-                branch_not_exists=$(git show-ref refs/heads/$branch);   \
                 git fetch --update-head-ok origin $branch:$branch 2>&1  \
                     | grep -v \"From\";                                 \
-                [ -z \"$branch_not_exists\" ]                           \
-                    && git branch --quiet -u $remote $branch;           \
+                git branch-exists $branch                               \
+                    || git branch --quiet -u $remote $branch;           \
             done;                                                       \
         else                                                            \
             echo Invalid parameters;                                    \
