Rename alias 'current-branch' -> 'get-current-branch'

--- a/.gitconfig
+++ b/.gitconfig
@@ -11,7 +11,7 @@
     pop = stash pop
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/^pick/$1/'\" git rebase -i \"$2\"~; }; f"
     git = "!cd "${GIT_PREFIX:-.}"; f() { git \"$@\"; }; f"
-    current-branch = rev-parse --abbrev-ref HEAD
+    get-current-branch = rev-parse --abbrev-ref HEAD
     branch-exists = "!cd "${GIT_PREFIX:-.}"; f() { git show-ref --quiet \"refs/heads/$1\"; }; f"
     is-ancestor = merge-base --is-ancestor
 
@@ -126,7 +126,7 @@
     }; f"
 
     merge-this = "!cd "${GIT_PREFIX:-.}"; f() { \
-        branch=$(git current-branch);           \
+        branch=$(git get-current-branch);           \
         git checkout master;                    \
         git merge --no-ff \"$branch\";          \
         git branch -d \"$branch\";              \
