--- a/.gitconfig
+++ b/.gitconfig
@@ -15,7 +15,7 @@
     get-current-hash = rev-parse HEAD
     branch-exists = "!cd "${GIT_PREFIX:-.}"; f() { git show-ref --quiet \"refs/heads/$1\"; }; f"
     is-ancestor = merge-base --is-ancestor
-    is-rebasing = "!f() { test -e .git/REBASE_HEAD; }; f"
+    is-rebasing = "!f() { test -d .git/rebase-merge; }; f"
     is-merging = "!f() { test -e .git/MERGE_HEAD; }; f"
     is-cherry-picking = "!f() { test -e .git/CHERRY_PICK_HEAD; }; f"
 
