--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,8 @@
 	email = shauntanzongzhi@gmail.com
 	name = EvitanRelta
 [alias]
-    cum = "!cd "${GIT_PREFIX:-.}"; f() { git add -A; git commit \"$@\"; }; f"
-    cumane = "!cd "${GIT_PREFIX:-.}"; f() { git add -A; git commit --amend --no-edit; }; f"
+    cum = "!cd "${GIT_PREFIX:-.}"; f() { git add -A && git commit \"$@\"; }; f"
+    cumane = "!cd "${GIT_PREFIX:-.}"; f() { git add -A && git commit --amend --no-edit; }; f"
     cane = commit --amend --no-edit
     st = status
     pop = stash pop
@@ -31,12 +31,12 @@
 
     dump = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 0 ]; then                       \
-            git restore :/;                         \
-            git clean -df :/;                       \
+            git restore :/                          \
+                && git clean -df :/;                \
         elif [ $# -eq 1 ] && [ $1 == "-f" ]; then   \
-            git reset --quiet;                      \
-            git restore :/;                         \
-            git clean -df :/;                       \
+            git reset --quiet                       \
+                && git restore :/                   \
+                && git clean -df :/;                \
         else                                        \
             echo Invalid parameters;                \
         fi;                                         \
@@ -44,13 +44,13 @@
     
     link = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 1 ] && [ $1 != "-f" ]; then     \
-            git remote add origin \"$1\";           \
-            git remote set-url origin \"$1\";       \
-            git push -u origin master;              \
+            git remote add origin \"$1\"            \
+                && git remote set-url origin \"$1\" \
+                && git push -u origin master;       \
         elif [ $# -eq 2 ] && [ $1 == "-f" ]; then   \
-            git remote add origin \"$2\";           \
-            git remote set-url origin \"$2\";       \
-            git push -uf origin master;             \
+            git remote add origin \"$2\"            \
+                && git remote set-url origin \"$2\" \
+                && git push -uf origin master;      \
         else                                        \
             echo Invalid parameters;                \
         fi;                                         \
@@ -58,35 +58,35 @@
     
     clone-nonempty = "!cd "${GIT_PREFIX:-.}"; f() { \
         if [ $# -eq 2 ] && [ $1 != "-f" ]; then     \
-            mkdir -p \"$2\";                        \
-            cd \"$2\";                              \
-            git init;                               \
-            git remote add origin \"$1\";           \
-            git fetch;                              \
-            git checkout -t origin/master;          \
+            mkdir -p \"$2\"                         \
+                && cd \"$2\"                        \
+                && git init                         \
+                && git remote add origin \"$1\"     \
+                && git fetch                        \
+                && git checkout -t origin/master;   \
         elif [ $# -eq 3 ] && [ $1 == "-f" ]; then   \
-            mkdir -p \"$3\";                        \
-            cd \"$3\";                              \
-            rm -drf .git;                           \
-            git init;                               \
-            git remote add origin \"$2\";           \
-            git fetch;                              \
-            git checkout -tf origin/master;         \
+            mkdir -p \"$3\"                         \
+                && cd \"$3\"                        \
+                && rm -drf .git                     \
+                && git init                         \
+                && git remote add origin \"$2\"     \
+                && git fetch                        \
+                && git checkout -tf origin/master;  \
         else                                        \
             echo Invalid parameters;                \
         fi;                                         \
     }; f"
     
-    stash-unstaged = "!cd "${GIT_PREFIX:-.}"; f() { \
-        git commit --quiet -m \"TEMP (staged changes)\";    \
-        git stash -u \"$@\";                        \
-        git undoc;                                  \
+    stash-unstaged = "!cd "${GIT_PREFIX:-.}"; f() {     \
+        git commit --quiet -m \"TEMP (staged changes)\" \
+            && git stash -u \"$@\"                      \
+            && git undoc;                               \
     }; f"
     
     stash-staged = "!cd "${GIT_PREFIX:-.}"; f() {   \
-        git stash-unstaged --quiet;                 \
-        git stash -u \"$@\";                        \
-        git stash pop --quiet \"stash@{1}\";        \
+        git stash-unstaged --quiet                  \
+            && git stash -u \"$@\"                  \
+            && git stash pop --quiet \"stash@{1}\"; \
     }; f"
 
     pull-all = "!cd "${GIT_PREFIX:-.}"; f() {                           \
@@ -97,10 +97,10 @@
             git fetch -p;                                               \
             echo \"From $(git remote get-url origin)\";                 \
             for remote_branch in `git branch -r | grep -v \" -> \" | grep \"origin/\"`; do \
-                branch=${remote_branch#origin/};                        \
-                git fetch --update-head-ok origin \"$branch:$branch\" 2>&1 \
-                    | grep -v \"From\";                                 \
-                git branch --quiet -u \"$remote_branch\" \"$branch\";   \
+                branch=${remote_branch#origin/}                         \
+                    && git fetch --update-head-ok origin \"$branch:$branch\" 2>&1 \
+                        | grep -v \"From\"                              \
+                    && git branch --quiet -u \"$remote_branch\" \"$branch\"; \
             done;                                                       \
         elif [ $# -gt 1 ] && [ $1 == "-s" ]; then                       \
             git fetch -p;                                               \
@@ -114,8 +114,8 @@
                     fi;                                                 \
                 done;                                                   \
                 git fetch --update-head-ok origin \"$branch:$branch\" 2>&1 \
-                    | grep -v \"From\";                                 \
-                git branch --quiet -u \"$remote_branch\" \"$branch\";   \
+                    | grep -v \"From\"                                  \
+                    && git branch --quiet -u \"$remote_branch\" \"$branch\"; \
             done;                                                       \
         else                                                            \
             echo Invalid parameters;                                    \
@@ -123,43 +123,43 @@
     }; f"
     
     pull-force = "!cd "${GIT_PREFIX:-.}"; f() { \
-        git fetch;                              \
-        git reset --hard \"origin/$(git branch --show-current)\"; \
+        git fetch                               \
+            && git reset --hard \"origin/$(git branch --show-current)\"; \
     }; f"
 
     merge-this = "!cd "${GIT_PREFIX:-.}"; f() { \
-        branch=$(git get-current-branch);       \
-        git checkout master;                    \
-        git merge --no-ff \"$branch\";          \
-        git branch -d \"$branch\";              \
+        branch=$(git get-current-branch)        \
+            && git checkout master              \
+            && git merge --no-ff \"$branch\"    \
+            && git branch -d \"$branch\";       \
     }; f"
     
     branch-d-both = "!cd "${GIT_PREFIX:-.}"; f() {  \
         if [ $# -eq 1 ]; then                       \
-            git branch -d \"$1\";                   \
-            git push -d origin \"$1\";              \
+            git branch -d \"$1\"                    \
+                && git push -d origin \"$1\";       \
         else                                        \
             echo Invalid parameters;                \
         fi;                                         \
     }; f"
 
-    get-deleted-branch = "!cd "${GIT_PREFIX:-.}"; f() { \
-        if [ $# -eq 1 ]; then                           \
-            commit_subject=$(git log --format=%s -n 1 \"$1\");                              \
-            branch_name=$(grep -Po \"(?<=')[^']+(?=')\" <<< \"$commit_subject\" | head -1); \
-            git checkout -b \"$branch_name\" \"$1^2\";  \
-            git checkout -;                         \
-        else                                        \
-            echo Invalid parameters;                \
-        fi;                                         \
+    get-deleted-branch = "!cd "${GIT_PREFIX:-.}"; f() {         \
+        if [ $# -eq 1 ]; then                                   \
+            commit_subject=$(git log --format=%s -n 1 \"$1\")   \
+                && branch_name=$(grep -Po \"(?<=')[^']+(?=')\" <<< \"$commit_subject\" | head -1) \
+                && git checkout -b \"$branch_name\" \"$1^2\"    \
+                && git checkout -;                              \
+        else                                                    \
+            echo Invalid parameters;                            \
+        fi;                                                     \
     }; f"
 
     unmerge = "!cd "${GIT_PREFIX:-.}"; f() {    \
         is_merge_commit="$(git rev-parse --verify \"HEAD^2\" 2> /dev/null)"; \
         if [ -n \"$is_merge_commit\" ]; then    \
-            git get-deleted-branch HEAD;        \
-            git undoc -f;                       \
-            git checkout -;                     \
+            git get-deleted-branch HEAD         \
+                && git undoc -f                 \
+                && git checkout -;              \
         else                                    \
             echo HEAD is not a merge commit;    \
         fi;                                     \
@@ -201,8 +201,8 @@
             echo Invalid parameters;                \
             exit 1;                                 \
         fi;                                         \
-        current_branch=$(git get-current-branch);   \
-        git rebase --onto \"$1\" \"$2~\" $current_branch;   \
+        current_branch=$(git get-current-branch)   \
+            && git rebase --onto \"$1\" \"$2~\" $current_branch; \
     }; f"
     
     replace-with = "!cd "${GIT_PREFIX:-.}"; f() {   \
