Add 'addn' alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
     st = status
     pop = stash pop
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/pick/$1/'\" git rebase -i --rebase-merges \"$2\"~; }; f"
+    addn = "!cd "${GIT_PREFIX:-.}"; f() { git add -A && git reset $@; }; f"
     git = "!cd "${GIT_PREFIX:-.}"; f() { git \"$@\"; }; f"
     get-current-branch = rev-parse --abbrev-ref HEAD
     get-current-hash = rev-parse HEAD
