--- a/.gitconfig
+++ b/.gitconfig
@@ -21,6 +21,7 @@
     is-rebasing = "!f() { test -d .git/rebase-merge; }; f"
     is-merging = "!f() { test -e .git/MERGE_HEAD; }; f"
     is-cherry-picking = "!f() { test -e .git/CHERRY_PICK_HEAD; }; f"
+    has-unmerged = "!f() { git ls-files --unmerged | grep -q .; }; f"
 
     re = "!cd "${GIT_PREFIX:-.}"; f() {   \
         if [[ $* == *-i* ]]; then                   \
