--- a/.gitconfig
+++ b/.gitconfig
@@ -207,7 +207,11 @@
     ab = "!cd "${GIT_PREFIX:-.}"; f() {             \
         in_prog_cmd=\"$(git get-in-prog-cmd)\"      \
             && echo \"Aborting $in_prog_cmd...\"    \
-            && eval \"git $in_prog_cmd --abort\";   \
+            && eval \"git $in_prog_cmd --abort\"    \
+            || git has-unmerged                     \
+            && echo \"...but has unmerged paths\"   \
+            && echo \"Resetting unmerged paths...\" \
+            && git reset --merge;                   \
     }; f"
 
     rebase-from = "!cd "${GIT_PREFIX:-.}"; f() {    \
