--- a/.gitconfig
+++ b/.gitconfig
@@ -21,6 +21,7 @@
     is-rebasing = "!f() { test -d .git/rebase-merge; }; f"
     is-merging = "!f() { test -e .git/MERGE_HEAD; }; f"
     is-cherry-picking = "!f() { test -e .git/CHERRY_PICK_HEAD; }; f"
+    is-reverting = "!f() { test -e .git/REVERT_HEAD; }; f"
     has-unmerged = "!f() { git ls-files --unmerged | grep -q .; }; f"
 
     re = "!cd "${GIT_PREFIX:-.}"; f() {   \
@@ -184,8 +185,10 @@
             echo merge;                             \
         elif git is-cherry-picking; then            \
             echo cherry-pick;                       \
+        elif git is-reverting; then                 \
+            echo revert;                            \
         else                                        \
-            >&2 echo \"Not currently rebasing, merging or cherry-picking\"; \
+            >&2 echo \"Not currently rebasing, merging, cherry-picking nor revert\"; \
             exit 1;                                 \
         fi;                                         \
     }; f"
