Modularise 'cum' alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,7 @@
 [rebase]
 	autosquash = true
 [alias]
-    cum = "!cd "${GIT_PREFIX:-.}"; f() { git add -A && git commit \"$@\"; }; f"
+    cum = "!~/.git-aliases/cum.sh"
     cumane = "!cd "${GIT_PREFIX:-.}"; f() { git add -A && git commit --amend --no-edit; }; f"
     cane = commit --amend --no-edit
     st = status
