--- a/.gitconfig
+++ b/.gitconfig
@@ -11,7 +11,7 @@
     cumane = "!~/.git-aliases/cumane.sh"
     cane = "!~/.git-aliases/cane.sh"
     st = status
-    pop = stash pop
+    pop = "!~/.git-aliases/pop.sh"
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/pick/$1/'\" git rebase -i --rebase-merges \"$2\"~; }; f"
     addn = "!cd "${GIT_PREFIX:-.}"; f() { git add -A && git reset $@; }; f"
     git = "!cd "${GIT_PREFIX:-.}"; f() { git \"$@\"; }; f"
