--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
     cum = "!~/.git-aliases/cum.sh"
     cumane = "!~/.git-aliases/cumane.sh"
     cane = "!~/.git-aliases/cane.sh"
-    st = status
+    st = "!~/.git-aliases/st.sh"
     pop = "!~/.git-aliases/pop.sh"
     rebun = "!cd "${GIT_PREFIX:-.}"; f() { GIT_SEQUENCE_EDITOR=\"perl -0777 -i -pe 's/pick/$1/'\" git rebase -i --rebase-merges \"$2\"~; }; f"
     addn = "!cd "${GIT_PREFIX:-.}"; f() { git add -A && git reset $@; }; f"
