Modularise 'dump' alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -43,18 +43,7 @@
         fi;                                         \
     }; f"
 
-    dump = "!cd "${GIT_PREFIX:-.}"; f() {           \
-        if [ $# -eq 0 ]; then                       \
-            git restore :/                          \
-                && git clean -df :/;                \
-        elif [ $# -eq 1 ] && [ $1 == "-f" ]; then   \
-            git reset --quiet                       \
-                && git restore :/                   \
-                && git clean -df :/;                \
-        else                                        \
-            echo Invalid parameters;                \
-        fi;                                         \
-    }; f"
+    dump = "!~/.git-aliases/dump/script.sh"
     
     link = "!cd "${GIT_PREFIX:-.}"; f() {           \
         if [ $# -eq 1 ] && [ $1 != "-f" ]; then     \
