Modularise 'is-ancestor' helper alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
     get-current-branch = rev-parse --abbrev-ref HEAD
     get-current-hash = rev-parse HEAD
     branch-exists = "!cd "${GIT_PREFIX:-.}"; f() { git show-ref --quiet \"refs/heads/$1\"; }; f"
-    is-ancestor = merge-base --is-ancestor
+    is-ancestor = "!~/.git-aliases/.helper_functions/is-ancestor/script.sh"
     is-rebasing = "!~/.git-aliases/.helper_functions/is-rebasing/script.sh"
     is-merging = "!~/.git-aliases/.helper_functions/is-merging/script.sh"
     is-cherry-picking = "!f() { test -e .git/CHERRY_PICK_HEAD; }; f"
