Modularise 'link' alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -31,19 +31,7 @@
 
     dump = "!~/.git-aliases/dump/script.sh"
     
-    link = "!cd "${GIT_PREFIX:-.}"; f() {           \
-        if [ $# -eq 1 ] && [ $1 != "-f" ]; then     \
-            git remote add origin \"$1\"            \
-                && git remote set-url origin \"$1\" \
-                && git push -u origin master;       \
-        elif [ $# -eq 2 ] && [ $1 == "-f" ]; then   \
-            git remote add origin \"$2\"            \
-                && git remote set-url origin \"$2\" \
-                && git push -uf origin master;      \
-        else                                        \
-            echo Invalid parameters;                \
-        fi;                                         \
-    }; f"
+    link = "!~/.git-aliases/link/script.sh"
     
     clone-nonempty = "!cd "${GIT_PREFIX:-.}"; f() { \
         if [ $# -eq 2 ] && [ $1 != "-f" ]; then     \
